changing path + creating solid jar